@@ -256,3 +256,17 @@ Finish the shipment::
     >>> inventory_move.effective_date == yesterday
     True
 
+Reschedule shipment::
+
+    >>> shipment_copy, = shipment_out.duplicate()
+    >>> shipment_copy.planned_date = yesterday
+    >>> shipment_copy.click('wait')
+    >>> set_user(1)
+    >>> Cron = Model.get('ir.cron')
+    >>> cron = Cron(method='stock.shipment.out|reschedule')
+    >>> cron.interval_number = 1
+    >>> cron.interval_type = 'months'
+    >>> cron.click('run_once')
+    >>> shipment_copy.reload()
+    >>> shipment_copy.planned_date == today
+    True
